--- a/re/Cargo.toml
+++ b/re/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lazy_static = "1.4.0"
+interval-map = { path = "../../IntervalMap" }
 finite-automata = { path = "../../FiniteAutomata" }
 re-bootstrap = { path = "../re-bootstrap" }
+parser-bootstrap = { path = "../../ParserGenerator/parser-bootstrap" }
