--- a/regular-expression/Cargo.toml
+++ b/regular-expression/Cargo.toml
@@ -3,19 +3,19 @@ name = "regular-expression"
 version = "0.1.0"
 authors = ["Robert Durfee <rbd@mit.edu>"]
 description = "A library for parsing, compiling, and executing regular expressions."
-license-file = "LICENSE"
-repository = "https://github.com/RobertDurfee/RegularExpression"
+license = "MIT"
+repository = "https://github.com/RobertDurfee/RegularExpression/tree/v0.1.0"
 readme = "README.md"
 keywords = ["regular-expression", "regex", "regexp", "re"]
 categories = ["parsing"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+documentation = "https://docs.rs/regular-expression/0.1.0/regular_expression/"
+homepage = "https://github.com/RobertDurfee/RegularExpression/tree/v0.1.0"
 
 [dependencies]
 lazy_static = "1.4.0"
-segment-map = "0.1.0"
-finite-automata = "0.1.1"
-regular-expression-bootstrap = "0.1.0"
-simple-lexer-bootstrap = "0.1.0"
-simple-parser-bootstrap = "0.1.0"
+segment-map = { path = "../../SegmentMap", version = "0.1.0" }
+finite-automata = { path = "../../FiniteAutomata", version = "0.1.1" }
+regular-expression-bootstrap = { path = "../regular-expression-bootstrap", version = "0.1.0" }
+simple-lexer-bootstrap = { path = "../../LexerGenerator/simple-lexer-bootstrap", version = "0.1.0" }
+simple-parser-bootstrap = { path = "../../ParserGenerator/simple-parser-bootstrap", version = "0.1.0" }
